deps/v8/test/message/modules-star-conflict2.out
*%(basename)s:7: SyntaxError: The requested module contains conflicting star exports for name 'a'
export * from "../mjsunit/modules-skip-star-exports-conflict.js";
       ^
SyntaxError: The requested module contains conflicting star exports for name 'a'

