deps/v8/test/message/modules-star-conflict2.js
// Copyright 2016 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// MODULE

export * from "../mjsunit/modules-skip-star-exports-conflict.js";
export * from "../mjsunit/modules-skip-6.js";

import {a} from "modules-star-conflict2.js";
